@@ -21,7 +21,7 @@ major_version = '.'.join(__version__.split('.')[:2])
 
 
 ## Base paths etc. for set and index file downloading
-urlbase = 'http://www.hepforge.org/archive/lhapdf/pdfsets/%s/' % major_version
+urlbase = 'https://lhapdf.hepforge.org/downloads?f=pdfsets/%s/' % major_version
 afsbase = '/afs/cern.ch/sw/lcg/external/lhapdfsets/current/'
 cvmfsbase='/cvmfs/sft.cern.ch/lcg/external/lhapdfsets/current/'
 index_filename = 'pdfsets.index'
@@ -277,7 +277,7 @@ def download_url(source, dest_dir, dryrun=False):
             import urllib2 as urllib
         try:
             u = urllib.urlopen(url)
-            file_size = int(u.info().get('Content-Length')[0])
+            file_size = int(u.info().get('Content-Length', [0])[0])
         except urllib.URLError:
             e = sys.exc_info()[1]
             logging.error('Unable to download %s' % url)
@@ -286,7 +286,10 @@ def download_url(source, dest_dir, dryrun=False):
         logging.debug('Downloading from %s' % url)
         logging.debug('Downloading to %s' % dest_filepath)
         if dryrun:
-            logging.info('%s [%s]' % (os.path.basename(url), convertBytes(file_size)))
+            if file_size:
+                logging.info('%s [%s]' % (os.path.basename(url), convertBytes(file_size)))
+            else:
+                logging.info('%s' % os.path.basename(url))
             return False
 
         try:
@@ -306,7 +309,10 @@ def download_url(source, dest_dir, dryrun=False):
                     dest_file.write(buffer)
 
                     status  = chr(13) + '%s: ' % os.path.basename(url)
-                    status += r'%s [%3.1f%%]' % (convertBytes(file_size_dl).rjust(10), file_size_dl * 100. / file_size)
+                    if file_size:
+                        status += r'%s [%3.1f%%]' % (convertBytes(file_size_dl).rjust(10), file_size_dl * 100. / file_size)
+                    else:
+                        status += r'%s' % convertBytes(file_size_dl).rjust(10)
                     sys.stdout.write(status+' ')
             except urllib.URLError:
                 e = sys.exc_info()[1]
